@@ -132,7 +132,6 @@ if (empty($this->data['parent_discoveryid'])) {
 					'&objname=triggers'.
 					'&srcfld1=triggerid'.
 					'&multiselect=1'.
-					'&monitored_hosts=1'.
 					'&with_triggers=1", 1000, 700);',
 				'link_menu'
 			)
